# OpenGL_Template

./: CMakeLists.txt  README.md  main.cpp
build_mac/: MyEngine  build.sh
build_mac/libs/glfw/: cmake_uninstall.cmake
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MyEngine.sln  MyEngine.vcxproj  MyEngine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  glad.vcxproj  glad.vcxproj.filters
build_win/MyEngine.dir/Debug/: MyEngine.exe.recipe  MyEngine.ilk
build_win/MyEngine.dir/Debug/MyEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_win/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_win/libs/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
build_win/libs/glfw/docs/: INSTALL.vcxproj  INSTALL.vcxproj.filters
build_win/libs/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
build_win/libs/glfw/src/glfw.dir/Debug/: glfw3.lib.recipe
build_win/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
(+15 files in other folders)
